--- a/index.html
+++ b/index.html
@@ -157,15 +157,15 @@
       src="https://media.giphy.com/media/3oriO0OEd9QIDdllqo/giphy.gif"
     />
 
-    <h1 id="question">Will you be my Valentine? 💖</h1>
-    <p id="subtitle">Be honest… but also choose wisely 😌</p>
+    <h1 id="question">Will you be my Valentine? Akki Poooopieee 💖</h1>
+    <p id="subtitle">Be honest…😌</p>
 
     <div class="btnRow" id="btnRow">
       <button id="yesBtn">Yes</button>
       <button id="noBtn" aria-label="No button">No</button>
     </div>
 
-    <div class="success" id="successMsg">YAY!!! 🥰💐 I love youuuuu</div>
+    <div class="success" id="successMsg">YAY!!! Banana Aashi is HAPPYYYYY teehee /div>
     <div class="smallNote" id="note">P.S. the “No” button is shy.</div>
   </div>
 
