--- a/index.html
+++ b/index.html
@@ -158,9 +158,8 @@
     />
 
     <h1 id="question">Will you be my Valentine? Akki Poooopieee 💖</h1>
-    <p id="subtitle">Be honest…😌</p>
-
-    <div class="btnRow" id="btnRow">
+    <p id="subtitle">Don't say no pweaseee 🥺</p>
+   <div class="btnRow" id="btnRow">
       <button id="yesBtn">Yes</button>
       <button id="noBtn" aria-label="No button">No</button>
     </div>
