--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
   <script>
     // ✅ Replace these GIFs if you want different ones
     const beggingGif = "https://media.giphy.com/media/3oriO0OEd9QIDdllqo/giphy.gif"; // puppy eyes vibe
-    const celebGif   = "https://media.giphy.com/media/26ufdipQqU2lhNA4g/giphy.gif"; // celebration
+    const celebGif   = "https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExM3BpNGdqM3lydmg3a2FrdWpvMzRsdXQ1eWZvbHB0NGNndDRvejV6ZCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/yUThmGwfT1hrORu84T/giphy.gif"; // celebration
 
     const mainGif = document.getElementById("mainGif");
     const yesBtn = document.getElementById("yesBtn");
@@ -299,10 +299,10 @@
 
     yesBtn.addEventListener("click", () => {
       mainGif.src = celebGif;
-      question.textContent = "LET’S GOOOOOOO 💞";
+      question.textContent = "YAYYAYAYAYAYAYAAYY BANANANANA AASHI HAPPYYY 💞";
       subtitle.textContent = "Best. Choice. Ever.";
       successMsg.style.display = "block";
-      note.textContent = "Okay now screenshot this and send it to me 😌";
+      note.textContent = "Be prepared on Saturday Night for the Ultimate Date Night hehe 😌";
 
       // Hide / disable buttons after yes
       yesBtn.disabled = true;
