--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <button id="noBtn">No</button>
     </div>
 
-    <div class="success" id="successMsg"> YAY!!! Banana Aashi is HAPPYYYYY teehee </div>
+    <div class="success" id="successMsg"> I LOVE YOU SOSOOS MUCH MY LOVEEEE </div>
 
     <div class="smallNote" id="note">
       P.S. the “No” button is shy.
